--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <div class="container">
         <h1 class="logo">Margalida Ferriol Torres</h1>
         <ul>
-          <li><a href="#about">Sobre mi</a></li>
-          <li><a href="#skills">Habilitats</a></li>
-          <li><a href="#projects">Projectes</a></li>
-          <li><a href="#experience">Experiència</a></li>
-          <li><a href="#education">Formació</a></li>
-          <li><a href="#certificats">Certificats</a></li>
-          <li><a href="#aficions">Aficions</a></li>
-          <li><a href="#idiomes">Idiomes</a></li>
-          <li><a href="#contact">Contacte</a></li>
+          <li><a href="#about">SOBRE MI</a></li>
+          <li><a href="#skills">HABILITATS</a></li>
+          <li><a href="#projects">PROJECTES</a></li>
+          <li><a href="#experience">EXPERIÈNCIA</a></li>
+          <li><a href="#education">FORMACIÓ</a></li>
+          <li><a href="#certificats">CERTIFICATS</a></li>
+          <li><a href="#aficions">AFICIONS</a></li>
+          <li><a href="#idiomes">IDIOMES</a></li>
+          <li><a href="#contact">CONTACTE</a></li>
         </ul>
       </div>
     </nav>
